[package]
name = "dyteslogs"
version = "0.1.0"
edition = "2024"
authors = ["dowell <dowell@funxdata.com>"]
description = "error logs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/funxdata/dyteslogs.git"
keywords = ["error","logs"] # 推荐
categories = ["network-programming"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
chrono ="0.4.31"